# quigleytan_genome_assembler

./: AssemblyTests.cpp  CMakeLists.txt  CleanSequenceTraversal.cpp  ContigAssembly.cpp  DNASequence.cpp  DNASequence.h  DNASequenceException.h  DataList.cpp  DeBruijnGraph.cpp  DeBruijnGraph.h  EulerianAssembly.cpp  EulerianTraversal.cpp  InitializationTests.cpp  KmerEncoder.cpp  KmerEncoder.h  KmerTable.h  KmerTypes.h  NodeNotFoundException.h  OpenAddressingTable.h  ProcessingTests.cpp  README.md  Recorder.h  SequenceReader.cpp  SequenceReader.h  VisData.h  genome_small_test.fna  h.h  main.cpp  small_test.fna
ConstructionPipelines/: EulerianAssembly.cpp  FastaContigAssembly.cpp  FastqContigAssembly.cpp  ScaffoldAssembly.cpp
CustomExceptions/: DNASequenceException.h  NodeNotFoundException.h
Data/: DataList.cpp  DataList.h  Escherichia_phage_phiX174.fna  Mycoplasma_genitalium_G37.fna  Saccharomyces cerevisiae S288C chromosome I.fna  [2]Haemophilus influenzae  [7]contig test sequence.fna  [7]short reads test.fastq  genome_small_test.fna  practice sequence.fna  small_test.fna  test_reads.fastq
Data/Results/: scaffolds_k9_greedy.fna  scaffolds_k9_scored.fna  scaffolds_k9_skip.fna
DataInitialization/: DNASequence.cpp  DNASequence.h  InitializationTests.cpp  SequenceReader.cpp  SequenceReader.h
DataProcessing/: KmerEncoder.cpp  KmerEncoder.h  KmerEncoding.cpp  KmerEncoding.h  KmerTable.h  OpenAddressingTable.h  ProcessingTests.cpp
GenomeAssembly/: AssemblyTests.cpp  ConstructionTests.cpp  ContigScaffolder.cpp  ContigScaffolder.h  ContigTraversal.cpp  ContigTraversal.h  DeBruijnGraph.cpp  DeBruijnGraph.h  EulerianPath.cpp  EulerianPath.h  EulerianTraversal.cpp  EulerianTraversal.h  FastqContigTests.cpp
Visualization/: ContigView.cpp  ContigView.h  DataExporter.cpp  DataExporter.h  DataLoader.cpp  DataLoader.h  GraphView.cpp  GraphView.h  LayoutEngine.cpp  LayoutEngine.h  VisualizerMain.cpp
